--- a/core/AndroidManifest.xml
+++ b/core/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
  * Wapdroid - Android Location based Wifi Manager
  * Copyright (C) 2012 Bryan Emmanuel
  *
@@ -21,18 +22,21 @@
     package="com.piusvelte.wapdroid.core"
     android:installLocation="auto"
     android:versionCode="380"
-    android:versionName="4.0">
+    android:versionName="4.0" >
 
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name="com.piusvelte.wapdroid.core.NetworkActivity"
+            android:label="@string/title_activity_network" >
+        </activity>
     </application>
 
     <uses-sdk
         android:minSdkVersion="9"
         android:targetSdkVersion="19" />
-
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
